# Sash_Transpiler

./: CMakeLists.txt  README.md  program.c
Transpiler/: file.c  file.v  file_out  methods.c  methods.h
Transpiler/Generator/: Generator.c  Generator.h
Transpiler/Lexer/: Lexer.c  Lexer.h
Transpiler/Parser/: Parser.c  Parser.h
